--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<body>
 		<header>
 			<nav>
+				<a href="./index.html">WEBSTUDIO</a>
 				<ul>
-					<li><a href="#">WEBSTUDIO</a></li>
 					<li><a href="#">Studio</a></li>
 					<li><a href="#">Portfolio</a></li>
 					<li><a href="#">Contacts</a></li>
@@ -17,14 +17,14 @@
 			</nav>
 			<address>
 				<ul>
-					<li><a href="#">info@devstudio.com</a></li>
-					<li><a href="#">+11(000)111-11-11</a></li>
+					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
 				</ul>
 			</address>
 		</header>
 		<main>
 			<section class="effective">
-				<h1>Effective Solutions for Your Bussiness</h1>
+				<h1>Effective Solutions for Your Business</h1>
 				<button type="button">Order Service</button>
 			</section>
 			<section class="benefits">
@@ -86,7 +86,7 @@
 			</section>
 		</main>
 		<footer>
-			<h2>WEBSTUDIO</h2>
+			<h2><a href="./index.html">WEBSTUDIO</a></h2>
 			<p>
 				Increase the flow of customers and sales for your business with digital
 				marketing & growth solutions.
